FIx radio button labels in permissions form from line wrapping

--- a/app/assets/stylesheets/styles/albums_new.scss
+++ b/app/assets/stylesheets/styles/albums_new.scss
@@ -24,6 +24,10 @@
 
 	}
 
+	.long-label {
+		white-space: nowrap;
+	}
+
 	input[type="submit"] {
 		color: $dark-purple;
 		background-color: $light-purple;
